--- a/Recipea/View/Base.lproj/Main.storyboard
+++ b/Recipea/View/Base.lproj/Main.storyboard
@@ -398,71 +398,115 @@
             <objects>
                 <viewController id="61B-7i-hE3" customClass="MyRecipesRecipeViewController" customModule="Recipea" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="5QH-AR-Mm6">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="1200"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="mjt-TK-8dR">
-                                <rect key="frame" x="20" y="101" width="374" height="734"/>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fTw-jo-woA">
+                                <rect key="frame" x="0.0" y="88" width="414" height="1112"/>
                                 <subviews>
-                                    <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="LcE-5A-E4F">
-                                        <rect key="frame" x="0.0" y="0.0" width="374" height="734"/>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hhA-sI-m2Y" userLabel="ContentView">
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="1300"/>
                                         <subviews>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5cr-rU-IaR">
-                                                <rect key="frame" x="0.0" y="15" width="374" height="35"/>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gha-kV-Rot">
+                                                <rect key="frame" x="20" y="103.5" width="374" height="0.0"/>
+                                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oow-dx-3bf">
+                                                <rect key="frame" x="20" y="152" width="374" height="0.0"/>
+                                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Ingredients:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sAP-nN-kcE">
+                                                <rect key="frame" x="20" y="70" width="374" height="23.5"/>
                                                 <constraints>
-                                                    <constraint firstAttribute="height" constant="35" id="LqS-0S-9UL"/>
+                                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="23.5" id="2AA-Vu-rsk"/>
+                                                    <constraint firstAttribute="height" relation="lessThanOrEqual" constant="23.5" id="aI7-b3-4rN"/>
+                                                    <constraint firstAttribute="height" constant="23.5" id="mUy-Fb-oKu"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="20"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jrm-Nq-rQg">
+                                                <rect key="frame" x="20" y="20" width="374" height="35"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="35" id="W31-cm-X9x"/>
+                                                    <constraint firstAttribute="height" constant="35" id="uqc-ji-s3c"/>
                                                 </constraints>
                                                 <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="30"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Instructions:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ts8-ey-kJz">
-                                                <rect key="frame" x="0.0" y="113.5" width="374" height="23.5"/>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Instructions:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dL4-6x-bAB">
+                                                <rect key="frame" x="20" y="118.5" width="374" height="23.5"/>
                                                 <constraints>
-                                                    <constraint firstAttribute="height" constant="23.5" id="GOb-7r-vNn"/>
+                                                    <constraint firstAttribute="height" constant="23.5" id="Zoi-5i-CRb"/>
+                                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="23.5" id="u9p-bp-hIk"/>
                                                 </constraints>
                                                 <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="20"/>
-                                                <nil key="textColor"/>
-                                                <nil key="highlightedColor"/>
-                                            </label>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Aw0-Uy-zOa">
-                                                <rect key="frame" x="0.0" y="147" width="374" height="0.0"/>
-                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
-                                                <nil key="textColor"/>
-                                                <nil key="highlightedColor"/>
-                                            </label>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Ingredients:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Mys-0g-Jfr">
-                                                <rect key="frame" x="0.0" y="65" width="374" height="23.5"/>
-                                                <constraints>
-                                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="23.5" id="5rf-NL-u79"/>
-                                                    <constraint firstAttribute="height" constant="23.5" id="x65-4x-woL"/>
-                                                </constraints>
-                                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="20"/>
-                                                <nil key="textColor"/>
-                                                <nil key="highlightedColor"/>
-                                            </label>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="a1l-vo-gig">
-                                                <rect key="frame" x="0.0" y="98.5" width="374" height="0.0"/>
-                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                         </subviews>
-                                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstItem="Jrm-Nq-rQg" firstAttribute="leading" secondItem="hhA-sI-m2Y" secondAttribute="leading" constant="20" id="1Wc-Gl-QV5"/>
+                                            <constraint firstItem="Gha-kV-Rot" firstAttribute="leading" secondItem="hhA-sI-m2Y" secondAttribute="leading" constant="20" id="51m-LC-D4g"/>
+                                            <constraint firstAttribute="trailing" secondItem="Jrm-Nq-rQg" secondAttribute="trailing" constant="20" id="ADD-G2-Q8F"/>
+                                            <constraint firstAttribute="height" constant="1300" id="Grq-LA-gdb"/>
+                                            <constraint firstItem="sAP-nN-kcE" firstAttribute="leading" secondItem="hhA-sI-m2Y" secondAttribute="leading" constant="20" id="Wra-hX-eih"/>
+                                            <constraint firstItem="dL4-6x-bAB" firstAttribute="leading" secondItem="hhA-sI-m2Y" secondAttribute="leading" constant="20" id="XwP-b7-bMx"/>
+                                            <constraint firstItem="sAP-nN-kcE" firstAttribute="top" secondItem="Jrm-Nq-rQg" secondAttribute="bottom" constant="15" id="bJH-lH-Hz5"/>
+                                            <constraint firstAttribute="trailing" secondItem="sAP-nN-kcE" secondAttribute="trailing" constant="20" id="bU0-XP-i4a"/>
+                                            <constraint firstItem="Jrm-Nq-rQg" firstAttribute="top" secondItem="hhA-sI-m2Y" secondAttribute="top" constant="20" id="cIc-IA-fEB"/>
+                                            <constraint firstAttribute="trailing" secondItem="dL4-6x-bAB" secondAttribute="trailing" constant="20" id="gfD-nX-kJa"/>
+                                            <constraint firstItem="oow-dx-3bf" firstAttribute="top" secondItem="dL4-6x-bAB" secondAttribute="bottom" constant="10" id="mXU-AM-uTE"/>
+                                            <constraint firstItem="oow-dx-3bf" firstAttribute="leading" secondItem="hhA-sI-m2Y" secondAttribute="leading" constant="20" id="miJ-PC-YpI"/>
+                                            <constraint firstItem="Gha-kV-Rot" firstAttribute="top" secondItem="sAP-nN-kcE" secondAttribute="bottom" constant="10" id="sNR-jS-iZw"/>
+                                            <constraint firstAttribute="trailing" secondItem="Gha-kV-Rot" secondAttribute="trailing" constant="20" id="w0e-2O-GgJ"/>
+                                            <constraint firstItem="dL4-6x-bAB" firstAttribute="top" secondItem="Gha-kV-Rot" secondAttribute="bottom" constant="15" id="xgk-6e-PU5"/>
+                                            <constraint firstAttribute="trailing" secondItem="oow-dx-3bf" secondAttribute="trailing" constant="20" id="zEA-Tm-9IY"/>
+                                        </constraints>
                                     </view>
                                 </subviews>
-                            </stackView>
+                                <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="hhA-sI-m2Y" secondAttribute="bottom" id="3eI-Vh-82n"/>
+                                    <constraint firstAttribute="trailing" secondItem="hhA-sI-m2Y" secondAttribute="trailing" id="IDt-Tk-iKf"/>
+                                    <constraint firstItem="hhA-sI-m2Y" firstAttribute="leading" secondItem="fTw-jo-woA" secondAttribute="leading" id="l8Z-T0-lnP"/>
+                                    <constraint firstItem="hhA-sI-m2Y" firstAttribute="top" secondItem="fTw-jo-woA" secondAttribute="top" id="zpT-1I-L5a"/>
+                                </constraints>
+                            </scrollView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="fTw-jo-woA" firstAttribute="leading" secondItem="kiT-T7-reo" secondAttribute="leading" id="IoD-ng-xeZ"/>
+                            <constraint firstItem="fTw-jo-woA" firstAttribute="trailing" secondItem="kiT-T7-reo" secondAttribute="trailing" id="Wek-z9-ykn"/>
+                            <constraint firstItem="fTw-jo-woA" firstAttribute="top" secondItem="kiT-T7-reo" secondAttribute="top" id="cq0-7X-bga"/>
+                            <constraint firstAttribute="bottom" secondItem="fTw-jo-woA" secondAttribute="bottom" id="jIP-KS-FWu"/>
+                            <constraint firstItem="hhA-sI-m2Y" firstAttribute="width" secondItem="5QH-AR-Mm6" secondAttribute="width" id="mr8-Xf-JOW"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="kiT-T7-reo"/>
                     </view>
-                    <navigationItem key="navigationItem" id="z0g-9N-BS1"/>
+                    <navigationItem key="navigationItem" id="z0g-9N-BS1">
+                        <barButtonItem key="rightBarButtonItem" title="Remove" id="wbZ-9v-3Ei">
+                            <connections>
+                                <action selector="removeButtonPressed:" destination="61B-7i-hE3" id="7cn-r6-Map"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <size key="freeformSize" width="414" height="1200"/>
+                    <connections>
+                        <outlet property="recipeIngredientsLabel" destination="Gha-kV-Rot" id="BHi-Pe-D0L"/>
+                        <outlet property="recipeInstructionsLabel" destination="oow-dx-3bf" id="nBC-mu-WN5"/>
+                        <outlet property="recipeNameLabel" destination="Jrm-Nq-rQg" id="ga5-TT-UAB"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="UDc-pD-sDs" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3470" y="709"/>
+            <point key="canvasLocation" x="3471" y="767"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="Z2Y-L7-ESD">
